export enum UserRole {
  SUPER_ADMIN = 'super_admin',
  AGENCY_ADMIN = 'agency_admin',
  AGENT = 'agent',
  PARTNER = 'partner',
}
